; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_pa64solib.c_bfd_lookup_symbol.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_pa64solib.c_bfd_lookup_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__*, i64, i32 }
%struct.TYPE_5__ = type { i64 }
%struct.cleanup = type { i32 }

@xfree = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*)* @bfd_lookup_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @bfd_lookup_symbol(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca %struct.TYPE_6__**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.cleanup*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i64 0, i64* %11, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @bfd_get_symtab_upper_bound(i32* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp ugt i32 %14, 0
  br i1 %15, label %16, label %57

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @xmalloc(i32 %17)
  %19 = inttoptr i64 %18 to %struct.TYPE_6__**
  store %struct.TYPE_6__** %19, %struct.TYPE_6__*** %7, align 8
  %20 = load i32, i32* @xfree, align 4
  %21 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %7, align 8
  %22 = call %struct.cleanup* @make_cleanup(i32 %20, %struct.TYPE_6__** %21)
  store %struct.cleanup* %22, %struct.cleanup** %10, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %7, align 8
  %25 = call i32 @bfd_canonicalize_symtab(i32* %23, %struct.TYPE_6__** %24)
  store i32 %25, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %26

26:                                               ; preds = %51, %16
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp ult i32 %27, %28
  br i1 %29, label %30, label %54

30:                                               ; preds = %26
  %31 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %31, i32 1
  store %struct.TYPE_6__** %32, %struct.TYPE_6__*** %7, align 8
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %31, align 8
  store %struct.TYPE_6__* %33, %struct.TYPE_6__** %6, align 8
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 8
  %37 = load i8*, i8** %4, align 8
  %38 = call i64 @strcmp(i32 %36, i8* %37)
  %39 = icmp eq i64 %38, 0
  br i1 %39, label %40, label %50

40:                                               ; preds = %30
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = add nsw i64 %43, %48
  store i64 %49, i64* %11, align 8
  br label %54

50:                                               ; preds = %30
  br label %51

51:                                               ; preds = %50
  %52 = load i32, i32* %9, align 4
  %53 = add i32 %52, 1
  store i32 %53, i32* %9, align 4
  br label %26

54:                                               ; preds = %40, %26
  %55 = load %struct.cleanup*, %struct.cleanup** %10, align 8
  %56 = call i32 @do_cleanups(%struct.cleanup* %55)
  br label %57

57:                                               ; preds = %54, %2
  %58 = load i64, i64* %11, align 8
  ret i64 %58
}

declare dso_local i32 @bfd_get_symtab_upper_bound(i32*) #1

declare dso_local i64 @xmalloc(i32) #1

declare dso_local %struct.cleanup* @make_cleanup(i32, %struct.TYPE_6__**) #1

declare dso_local i32 @bfd_canonicalize_symtab(i32*, %struct.TYPE_6__**) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @do_cleanups(%struct.cleanup*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
